prevented scroll bar from repositioning page: http://stackoverflow.com/questions/1417934/how-to-prevent-scrollbar-from-repositioning-web-page

--- a/Client/src/app/index.scss
+++ b/Client/src/app/index.scss
@@ -14,3 +14,7 @@
 }
 // injector
 // endinjector
+
+html {
+  overflow-y: scroll;
+}
